port3008にも対応(コマンドライン引数で渡す